fix add
